--- a/tutorials/spde/spde-tutorial-mesh.Rnw
+++ b/tutorials/spde/spde-tutorial-mesh.Rnw
@@ -8,59 +8,61 @@ require(INLA)
 
 The first step to fit the model is 
 the construction of the 'mesh'. 
-This step must be made VERY CAREFULLY. 
+This step must be done VERY CAREFULLY. 
 It is similar to choosing the integration 
-points on a numeric ingration algorithm. 
-We need regular ones? 
-How many points is needed? 
+points on a numeric integration algorithm. 
+Should the boints be regular?
+How many points are needed? 
 
-Additionally, here we need, yet, 
-to add, ALSO CAREFULLY, additional 
-points around the boundary, 
+Additionally, we need to add, ALSO CAREFULLY, 
+additional points around the boundary, 
 the outer extension.
-It is necessary to avoid the 
-boundary effect were we have variance 
-twice at border than that one within domain 
+This is necessary to avoid a 
+boundary effect where we have a variance 
+twice as larger at the border than within the domain 
 \cite{lindgren:2012}. 
 For more about it please see \cite{lindgrenR:2013}. 
 
 \subsection{Getting started}
 
-For two dimentional mesh, we have a main 
+For a two dimentional mesh, we have a main 
 function \code{inla.mesh.2d()} that is
 recommended to use for building a mesh. 
 This function creates the Constrained Refined 
 Delaunay Triangulation (CRDT) that we just call mesh. 
-There are a several options on is function: 
+There are a several options: 
 <<argsmesh>>=
 args(inla.mesh.2d)
 @ 
 
-We need some reference about the study region. 
-It is possible to be provided by the location points, 
-supplied on the \code{loc} argument, 
-or by a location domain (a polygon for example). 
-If we supply the points location, or the domain 
-is supplied \code{loc.domain} argument, 
+We need some reference about the study region, 
+which can be provided by the location points or just a domain. 
+The location, supplied on the \code{loc} argument, 
+are used as initial triangulation nodes. 
+A single polygon can be supplied to determine the 
+domain extent on the \code{loc.domain} argument. 
+If we supply the point locations, or the domain 
+is supplied using the \code{loc.domain} argument, 
 the algorithm find a convex hull mesh. 
 A non convex hull mesh can be made when we 
 provide a (list of) set of polygons on the 
-\code{boundary} argument, each elements of 
-this list of \code{inla.mesh.segment()} class. 
+\code{boundary} argument, where each element of 
+this list is of \code{inla.mesh.segment()} class. 
+So, one of these three options is mandatory. 
 
-The another mandatory argument is the \code{max.edge}. 
+The other mandatory argument is the \code{max.edge}. 
 This argument specifies the maximum allowed 
 triangle edge lengths in the inner domain 
 and in the outer extension. 
 So, it is a scalar or length two vector.
-This argument is a numeric on the same 
-scale unit of the coordinates. 
+This argument is numeric on the 
+\textbf{SAME SCALE UNIT} as the coordinates. 
 
-The another arguments are used on as additional 
+The another arguments are used to specify additional 
 conditions. The \code{offset} is a numeric, or 
-length two vector. If negative, interpreted as
+length two vector. If negative it is interpreted as
 a factor relative to the approximate data diameter. 
-If positive, is the extension distance on same 
+If positive it is the extension distance on same 
 scale unit to the coordinates provided. 
 
 The argument \code{n} is the initial number 
@@ -68,38 +70,38 @@ of points on the extended boundary.
 The \code{interior} is a list of segments 
 to specify interior constraints, each one of  
 \code{inla.mesh.segment} class. 
-A good mesh need to have triangles more 
-regular as possible, on size and shape. 
-To help this requeriment, upward the 
+A good mesh needs to have triangles as 
+regular as possible in size and shape. 
+To help this requirement in addition to 
 \code{max.edge}, we have the 
-\code{min.angle} argument, that can be 
+\code{min.angle} argument, which can be 
 scalar or length two vector, to specify 
 the minimum internal angles of the 
 triangles on the inner domain and 
 on the outer extension. 
-This values at most 21 guarantee 
+Values up to 21 guarantee 
 the convergence of the algorithm. 
 
-Still on the shape of the triangles, we also 
-have the \code{cutoff} argument that is the 
-minimum allowed distance between points. 
-It means that points at with less 
+To further control the shape of the triangles, 
+we also have the \code{cutoff} argument, which is 
+the minimum allowed distance between points. 
+It means that points at a closer 
 distance than the supplied value 
 are replaced by a single vertex. 
 So, it avoids small triangles and 
-must be provided a positive number, 
-specially when we have some very close 
-points, on points location or on the domain. 
+must be a positive number, and is critical 
+when we have some very close points, either 
+for point locations or on the domain boundary. 
 
 To understand how this function works, 
-we apply this function, varying some arguments,
-to first five locations of the toy dataset. 
+we apply it while varying some arguments
+to the first five locations of the toy dataset. 
 <<SPDEtoy>>=
 data(SPDEtoy)
 coords <- as.matrix(SPDEtoy[,1:2]) ;   p5 <- coords[1:5,]
 @ 
 We also build some meshes using the domain and not 
-the points, we define the domain with
+the points and we define the domain with
 <<domain>>= 
 pl.dom <- cbind(c(0,1,1,0.7,0), c(0,0,0.7,1,1))
 @ 
@@ -116,9 +118,8 @@ m7 <- inla.mesh.2d(, pl.dom, max.edge=c(0.3, 0.5), n=5, offset=c(.05,.1))
 m8 <- inla.mesh.2d(, pl.dom, max.edge=c(.3, 0.5), n=7, offset=c(.01,.3)) 
 m9 <- inla.mesh.2d(, pl.dom, max.edge=c(.3, 0.5), n=4, offset=c(.05,.3)) 
 @ 
-We visualize these meshes on the 
-Figure~\ref{fig:meshtest}, 
-with the code below 
+We visualize these meshes in Figure~\ref{fig:meshtest}, 
+produced with the code below 
 <<vizmesh,eval=FALSE>>=
 par(mfrow=c(3, 3), mar=c(0,0,1,0))
 for (i in 1:9) { 
@@ -137,54 +138,53 @@ for (i in 1:9) {
 \label{fig:meshtest}
 \end{figure}
 
-In the \code{m1} mesh has two main problems: 
+The \code{m1} mesh has two main problems: 
 1) some triangles with small inner angles, 
-2) some large triangles on inner domain. 
+2) some large triangles in the inner domain. 
 In the \code{m2} mesh, we relax the restriction 
 on the locations, because points with distance less 
-than the cutoff are considered single vertice. 
+than the cutoff are considered a single vertex. 
 This avoids some of the triangles (at bottom right 
-side) with small angles on the previous one. 
+side) with small angles on the previous mesh.
 So the \textbf{cutoff is a VERY GOOD idea}!
-The \code{m3} mesh on the top right has its inner 
-triangles has less than 0.1 and this mesh 
-looks better than the two previous.
+Each inner triangle in the \code{m3} mesh on the 
+top right had edge length less than 0.1 and this 
+mesh looks better than the two previous ones.
 
-The \code{m4} was made with no first 
+The \code{m4} was made without first building a 
 convex hull extension around the points. 
-It has just the second one. 
+It has just the second outer bondary. 
 In this case, the length of inner triangles does not 
-works (first value on \code{max.edge} argument) and 
-we have just triangles with length edges at most 0.5. 
-The shapes of the triangles looks good, 
+work (first value on \code{max.edge} argument) and 
+we have triangles with edge lengths up to 0.5. 
+The shape of the triangles looks good, 
 except for these ones with vertices 
-including the two points at bottom rigth side. 
+including the two points at the bottom right side. 
 
-The \code{m5} mesh is made just using the domain 
+The \code{m5} mesh was made just using the domain 
 polygon and it has shape similar to the domain area. 
 In this mesh we have some small triangles at corners 
-just due the fact that is is build without \code{cutoff}. 
+due the fact that is was built without specifying a \code{cutoff}. 
 Also, we have a (relatively) small first extension 
 and a (relatively) large second one. 
-On the \code{m6} mesh we have add the a cutoff 
-and get a better mesh than the previous one. 
+On the \code{m6} mesh we have added the cutoff 
+and got a better mesh than the previous one. 
 
 In the last tree meshes we change the initial 
 number of extension points. 
-Its can be usefull to change when we have some 
-polygons domain to get convergence. 
-Here we show the shape of the final mesh 
+It can be useful to change in some situations 
+to get convergence. 
+Here we show the shape of the mesh 
 that we got with, for example,
-\code{n=5} on the \code{m7} mesh, 
-This number produces a mesh that seems not 
-adequate for this domain because we have non 
-uniform exension behind the border. 
+\code{n=5}, in the \code{m7} mesh. 
+This number produces a mesh that seems 
+inadequate for this domain because we have a 
+non uniform exension behind the border. 
 The \code{m9} mesh has very bad 
 triangles shapes.
 
-
-The object returned by \code{inla.mesh.2d()} 
-function has class \code{inla.mesh} 
+The object returned by the \code{inla.mesh.2d()} 
+function is of class \code{inla.mesh} 
 and contains a list of things:
 <<meshclass>>=
 class(m1)
@@ -195,45 +195,44 @@ The number of vertices on each mesh is
 c(m1$n, m2$n, m3$n, m4$n, m5$n, m6$n, m7$n, m8$n, m9$n)
 @ 
 The 'graph' element represents the CRDT obtained. 
-More, on 'graph' element we have the a matrix that 
-represents the graph of neighborhood structure. 
+In addition, the 'graph' element contains the matrix that 
+represents the graph of the neighborhood structure. 
 For example, for \code{m1} we have 'A'
 <<A1>>=
 dim(m1$graph$vv)
 @ 
 The vertices that correspond the location 
-points are identified on 'idx' element
+points are identified in the 'idx' element
 <<meshid>>=
 m1$idx$loc
 @ 
 
 \subsection{Non-convex hull meshes}
 
-All the meshes on Figure~\ref{fig:meshtest} 
+All the meshes in Figure~\ref{fig:meshtest} 
 are made to have a convex hull boundary. 
-A convex hull is a polygon 
+A convex hull is a polygon of 
 triangles out of the domain area, the 
 extension made to avoid the boundary effect. 
-A triangulation without additional border 
+A triangulation without an additional border 
 can be made by supplying the \code{boundary} 
-argument instead the \code{location} or 
+argument instead of the \code{location} or 
 \code{loc.domain} argument. 
 One way is to build a boundary for the points 
 and supply it on \code{boundary} argument. 
-But, in this case we need a boundary
 
-We can build boundaries using the 
+We can also build boundaries using the 
 \code{inla.nonconvex.hull()} function
 <<noncovex>>=
 args(inla.nonconvex.hull)
 @ 
 In this function we provide the points 
-set and some constraint arguments. 
-We are able to control the shape of 
-the boundary by its convexity, 
+and set some constraint. 
+We can control the shape of 
+the boundary including its convexity, 
 concavity and resolution.
-We make some boundaries and build a mesh
-with each one to understand better it. 
+Here, we make some boundaries and build a mesh
+with each one to better understand it. 
 <<nonconmesh>>=
 bound1 <- inla.nonconvex.hull(p5)
 bound2 <- inla.nonconvex.hull(p5, convex=0.5, concave=-0.15)
@@ -246,7 +245,7 @@ m12 <- inla.mesh.2d(boundary=bound3, cutoff=0.05, max.edge=c(.1,.2))
 m13 <- inla.mesh.2d(boundary=bound4, cutoff=0.05, max.edge=c(.1,.2))
 @ 
 
-These meshes are visualized on 
+These meshes are visualized in 
 Figure~\ref{fig:nonconmesh} by commands bellow 
 <<nonconmeshv,eval=F>>=
 par(mfrow=c(2,2), mar=c(0,0,1,0))
@@ -264,8 +263,8 @@ for (i in 10:13) {
 \label{fig:nonconmesh}
 \end{figure}
 
-The \code{m10} mesh is builded with a boundary 
-that we got with default arguments on 
+The \code{m10} mesh is built with a boundary 
+that we got using default arguments in the 
 \code{inla.nonconvex.hull()} function. 
 The default \code{convex} and \code{concave} 
 arguments are both equal \code{0.15} proportion 
@@ -273,56 +272,56 @@ of the points domain radius, that is computed by
 <<defnc>>=
 max(diff(range(p5[,1])), diff(range(p5[,2])))*.15
 @ 
-If we supply larger convex value, like the other used 
-to generate the \code{m11}, we got a larger boundary. 
-It's because all circles with centre on each 
-point and radius less than the convex value 
-are incide to the boundary. 
-When we choose a larger concave value, the 
-boundary used to the 'm12' and 'm13' meshes, 
+If we supply a larger convex value, like the one used 
+to generate \code{m11}, we get a larger boundary. 
+It's because all circles with a centre on each 
+point and a radius less than the convex value 
+are inside the boundary. 
+When we choose a larger concave value, as in the 
+boundary used for the 'm12' and 'm13' meshes, 
 we don't have circles with radius less than the 
 concave value outside the boudary. 
 If we choose a smaller resolution, 
-we got a boundary with small resolution 
+we get a boundary with small resolution 
 (in terms of number of points), for example, 
 comparing the \code{m12} and \code{m13} meshes. 
 
 \subsection{Meshes for the toy example}
 
 To analyze the toy data set, we use 
-six triangulations options to make 
-comparisons on section~\ref{sec:meshcompare}. 
+six triangulation options to make 
+comparisons in section~\ref{sec:meshcompare}. 
 The first mesh forces the location points 
-as vertices of the mesh. 
+to be vertices of the mesh. 
 <<mesh12>>=
 mesh1 <- inla.mesh.2d(coords, max.edge=c(0.035, 0.1)) 
 mesh2 <- inla.mesh.2d(coords, max.edge=c(0.15, 0.2)) 
 @ 
 
 The second and third meshes are based on 
-the points, but we use the cutoff greather 
-than zero to avoid small triangles on regions 
-where we have more density observations 
+the points, but we use a cutoff greather 
+than zero to avoid small triangles in regions 
+where we have dense observations 
 <<mesh3>>=
 mesh3 <- inla.mesh.2d(coords, max.edge=c(0.15, 0.2), cutoff=0.02)
 @ 
 
 We also build three other meshes based on the 
-domain area. These are builded to have 
-aproximately the same number of vertices than 
-previous 
+domain area. These are built to have 
+approximately the same number of vertices as the 
+previous ones 
 <<mesh456>>=
 mesh4 <- inla.mesh.2d(, pl.dom, max.e=c(0.0355, 0.1))
 mesh5 <- inla.mesh.2d(, pl.dom, max.e=c(0.092, 0.2))
 mesh6 <- inla.mesh.2d(, pl.dom, max.e=c(0.11, 0.2))
 @ 
 
-The number of nodes on each one of these meshes are 
+The number of nodes in each one of these meshes is 
 <<nmesh>>=
 c(mesh1$n, mesh2$n, mesh3$n, mesh4$n, mesh5$n, mesh6$n)
 @ 
 
-These six meshes are showed on Figure \ref{fig:crdt1} 
+These six meshes are shown in Figure \ref{fig:crdt1} 
 with code below 
 <<plotmesh1,eval=F>>=
 par(mfrow=c(2,3), mar=c(0,0,0,0)) 
@@ -340,11 +339,11 @@ for (i in 1:6)
 
 \subsection{Meshes for Paran\'a state}
 
-We have some examples using data collected on 
-Paran\'a state, in Brasil. 
+We have some examples using data collected in 
+Paran\'a state, in Brazil. 
 In this case we need to take into account two 
-things: one is the shape of these domain area 
-and other is the sistem of coordinates reference. 
+things: one is the shape of this domain area 
+and the other is the coordinates reference system. 
 
 We have the daily rainfall data 
 <<prrain>>=
@@ -352,8 +351,8 @@ data(PRprec)
 dim(PRprec)
 PRprec[1:3, 1:10]
 @ 
-that consists of the dayli rainfall data from \code{616} 
-stations for each day of the 2012 year. 
+that consists of the daily rainfall data from \code{616} 
+stations for each day of the 2011 year. 
 The coordinates (two first colums) 
 are on the latlong projection. 
 
@@ -366,12 +365,12 @@ that consists of a set of \code{2055}
 points on the latlong projection. 
 
 In this case is best to use a non-convex hull mesh. 
-We start it with building a non-convex domain with
+We start by building a non-convex domain with
 <<prmesh>>=
 prdomain <- inla.nonconvex.hull(as.matrix(PRprec[,1:2]), 
                                 -0.03, -0.05, resolution=c(100,100))
 @ 
-with this defined domaind we build two meshes with different 
+with this defined domain we build two meshes with different 
 resolution (max edge length) on the inner domain 
 <<mesh2pr>>=
 (prmesh1 <- inla.mesh.2d(boundary=prdomain, max.edge=c(.7,.7), 
@@ -379,8 +378,8 @@ resolution (max edge length) on the inner domain
 (prmesh2 <- inla.mesh.2d(boundary=prdomain, max.edge=c(.45,1), cutoff=0.2))$n
 @ 
 
-We can visualize this both meshes on the 
-Figure~\ref{fig:prmesh} with commands bellow 
+We can visualize both meshes on the 
+Figure~\ref{fig:prmesh} with commands below 
 <<prmesh,eval=F>>=
 par(mfrow=c(1,2), mar=c(0,0,0,0))
 plot(prmesh1, asp=1, main='');   lines(PRborder, col=3)
@@ -398,11 +397,11 @@ plot(prmesh2, asp=1, main='');   lines(PRborder, col=3)
 \subsection{Triangulation with a SpatialPolygonsDataFrame}
 
 Suppose that we have a map of the domain region. 
-In \pkg{R} the representation of an spatial object 
-is made by object classes on \pkg{sp} package, 
+In \pkg{R} the representation of a spatial object 
+is made using object classes in the \pkg{sp} package, 
 see~\cite{sp} and \cite{Bivandetal:2008}. 
 To show an aplication in this case, we use 
-the North Caroline map, on package \pkg{spdep}, 
+the North Carolina map, in package \pkg{spdep}, 
 \cite{spdep}. 
 
 <<ncmap>>=
@@ -412,12 +411,12 @@ nc.sids <- readShapePoly(nc.fl, ID="FIPSNO",
                          proj4string=CRS("+proj=longlat +ellps=clrk66"))
 @ 
 
-We simplify this map uniting all the areas together. 
+We simplify this map by uniting all the areas together. 
 To do it, we use the \code{unionSpatialPolygons()} 
 \pkg{spdep} function that uses function of the \pkg{rgeos} 
 package~\cite{rgeos}. If we don't have the \pkg{rgeos} 
 we can use the \pkg{gpclib} package, but we need to set 
-a permition before the work with this library 
+a permission before the work with this library 
 <<uionsp>>=
 gpclibPermit()
 nc.border <- unionSpatialPolygons(nc.sids, rep(1, nrow(nc.sids)))
@@ -461,3 +460,64 @@ save('mesh6', file='mesh6.RData')
 save('prmesh1', file='prmesh1.RData')
 save('prmesh2', file='prmesh2.RData')
 @ 
+
+\section{Mesh with holes and physical boundaries}
+
+Sometimes we need to deal with physical boundaries. 
+It can be when there is a hole inside the domain or when the domain shape is not convex. 
+An example of application is when modelling fish and we have to consider 
+the inland as a physical barrier and, sometimes, islands inside the domain. 
+In the Figure~\ref{fig:lakehole} we have two neighbour regions, 
+one with a hole and one with no convex shape.
+Suppose that it is necessary to avoid correlation between 
+near regions separated by land. 
+For example, suppose that we want to make sure that the 
+correlation between A and C is smaller than between 
+A and B or between B and C.
+
+<<hexample,eval=FALSE>>=
+### polygon with hole
+pl1 <- Polygon(cbind(c(0,15,15,0,0), c(5,0,20,20,5)), hole=FALSE)
+h1 <- Polygon(cbind(c(5,7,7,5,5), c(7,7,15,15,7)), hole=TRUE)
+pl2 <- Polygon(cbind(c(15,20,20,30,30,15,15), c(10,10,0,0,20,20,10)), hole=FALSE)
+sp <- SpatialPolygons(list(Polygons(list(pl1, h1), '0'), Polygons(list(pl2), '1')))
+plot(sp) ### to visualize it
+text(c(13, 17, 23), c(3, 12, 3), LETTERS[1:3], cex=3)
+@ 
+
+\setkeys{Gin}{width=0.99\textwidth}
+\begin{figure}\centering
+<<plotlake,echo=F,results=hide,fig=TRUE,eps=FALSE,width=5.5,height=3.5>>=
+<<hexample>>
+@ 
+\caption{Region with a hole and non convex domain.}
+\label{fig:lakehole}
+\end{figure}
+
+In this example we do not want additional points outer the domain. 
+To have it, we have to supply a length one value for \texttt{max.edge}. 
+The following code is to prepare the boundary and built the mesh. 
+<<hbond>>=
+bound <- inla.sp2segment(sp)
+mesh <- inla.mesh.2d(boundary=bound, max.edge=2)
+@ 
+
+The mesh is displayed in the Figure~\ref{fig:meshhole} 
+using the commands below:
+<<holeexample,eval=FALSE>>=
+par(mar=c(0,0,0,0), bg=rgb(.7,.5,.5))
+plot(sp, col=rgb(.3,.7,.9))
+plot(mesh, add=TRUE, lwd=2)
+text(c(13, 17, 23), c(3, 12, 3), LETTERS[1:3], cex=3)
+@ 
+\setkeys{Gin}{width=0.99\textwidth}
+\begin{figure}\centering
+<<plothex,echo=F,results=hide,fig=TRUE,eps=FALSE,width=5.5,height=5.5>>=
+<<holeexample>>
+@ 
+\caption{Triangulation with hole and non convex shaped region}
+\label{fig:meshhole}
+\end{figure}
+
+Notice that when building the SPDE model, the neighborhood structure of the mesh is taken into account. 
+So, it is easier to reach B from A than C on the related graph.
