--- a/tutorials/spde/spde-tutorial.bib
+++ b/tutorials/spde/spde-tutorial.bib
@@ -236,3 +236,21 @@ keywords = "Spatio-temporal dynamic models"
     note = {R package version 0.1-5},
     url = {http://CRAN.R-project.org/package=deldir},
   }
+
+@Article{hendersonSG:2003,
+  author = 	 {Henderson, R. and Shimakura, S. and Gorst, D.},
+  title = 	 {Modeling spatial variation in leukemia survival data},
+  journal = 	 {JASA},
+  year = 	 {2003},
+  volume = 	 {97},
+  number = 	 {460},
+  pages = 	 {965-972}
+}
+
+@Book{blangiardoC:2015,
+  author = 	 {Blangiardo, M. and Cameletti, M.},
+  title = 	 {Spatial and Spatio-Temporal Bayesian models with R-INLA},
+  publisher = 	 {Wiley},
+  year = 	 {2015}
+}
+
