--- a/tutorials/spde/spde-tutorial-spde-results.tex
+++ b/tutorials/spde/spde-tutorial-spde-results.tex
@@ -1,31 +1,33 @@
 \chapter{The SPDE approach}\label{ch:spde} 
 
-In the literature there is some ideas to 
+In the literature there are some ideas to 
 fit GF by an approximation of the GF to any GMRF. 
-The very good alternative found is shuch one that 
-found a explicit link between the an 
+A very good way is to use an explicit link between 
+the precision matrix from the solution to a 
 stochastic partial differential equation (SPDE) 
 and the Mat\'ern Gaussian random fields, 
 \cite{lindgrenRL:2011}. 
-The solution of the that SPDE 
-thought the Finite Element Method (FEM) 
-provides a explicit link between GF to GMRF. 
+This approach provide an explicit link between GF and GMRF. 
+It is common to use the the Finite Element Method (FEM)
+to estimate the solution to an SPDE. 
+This is particularly convenient in the case 
+where we have a set of irregular locations. 
 
 \section{The \cite{lindgrenRL:2011} results} 
 
 The SPDE approach is based on two main results. 
 The first one extends the result obtained by \cite{besag:1981}. 
-This result is to approximate a GF with generalized 
+This result is to approximate a GF with a generalized 
 covariance function, obtained when $\nu \rightarrow 0$ 
 in the Mat\'ern correlation function. 
 This approximation, considering a regular two-dimensional 
 lattice with number of sites tending to infinite, 
-is that the full conditional have 
+is that the full conditional has 
 \begin{equation}
 E(x_{ij}|x_{-ij}) = \frac{1}{a}(x_{i-1,j}+x_{i+1,j}+x_{i,j-1}+x_{i,j+1})
 \end{equation}
 and $Var(x_{ij}|x_{-ij}) = 1/a$ for $|a|>4$. 
-In the representation using precision matrix, 
+In the representation using a precision matrix, 
 we have, for one single site, just the upper right 
 quadrant and with $a$ as the central element, that 
 \begin{equation}\label{eq:q0}
@@ -60,18 +62,25 @@ and, for $\nu=2$:
 a(a^2+12) & -3(a^2+3) & 3a & -1
 \end{matrix}
 \end{equation}\label{eq:q2}
+
 This is an intuitive result, because if we have 
 larger $\nu$ on the Mat\'ern correlation function of the GF, 
 we need more non zero neighbours sites in the GMRF representation. 
 Remember that it is the smoothness parameter, so if the 
-process is more smooth, we need a more larger neighbourhood 
-on the GMRF representation. 
+process is more smooth, the precision matrix has values over 
+a larger neighbourhood areas. 
+Hovewer, it does not means that one can just averages over 
+larger neighboorhod to make it smooth. 
+However, it does not means averaging over larger 
+neighboorhod to make it smoother. 
+This is like when going from first order random walk to 
+the second order one: to square the precision matrix. 
 
 If the spatial locations are on a irregular grid, 
-it is necessary the use of the second result on
+it is necessary to use the second result in
 \cite{lindgrenRL:2011}. 
-To extend the first result, a suggestion is the use of 
-the finite element method (FEM) for a interpolation of 
+To extend the first result, the finite element 
+method (FEM) is used for a interpolation of 
 the locations of observations to the nearest grid point. 
 To do it, suppose that the $\Re^2$ is subdivided into 
 a set of non-intersecting triangles, where any two
@@ -81,7 +90,7 @@ The suggestion is to start with the location of the
 observed points and add some triangles (heuristically) 
 with restriction to maximize the allowed edge length 
 and minimize the allowed angles. 
-The the approximation is 
+The approximation is 
 \[x(\bbu) = \sum_{k=1}^{n}\psi_k(\bbu)w_k\]
 for some chosen basis functions {$\psi_k$}, 
 Gaussian distributed weights $w_k$ and $n$ the 
@@ -105,8 +114,7 @@ as a function of $\kappa^2$ and $\alpha$:
 \bQ_{\alpha,\kappa^2} = \bK_{\kappa^2}\bC^{-1}Q_{\alpha-2,\kappa^2}\bC^{-1}\bK_{\kappa^2}, 
 \;\;\;\mbox{for} \;\;\alpha = 3,4,...\;.
 \end{array}\end{equation}
-Here we have too the notion that if $\nu$ increases, 
-we need a more dense precision matrix. 
+Again, increasing $\nu$ denser the precision matrix. 
 
 The $\bQ$ precision matrix is generalized for a fractional values 
 of $\alpha$ (or $\nu$) using a Taylor approximation, 
@@ -117,12 +125,12 @@ order $p=\lceil \alpha \rceil$ for the precision matrix
 \bQ = \sum_{i=0}^p b_i \bC(\bC^{-1}\bG)^i.
 \end{equation}
 For $\alpha=1$ and $\alpha=2$ we have the (\ref{eq:Qalpha}). 
-Because, for $\alpha=1$, we have $b_0=\kappa^2$ and $b_1=1$, 
+Because for $\alpha=1$, we have $b_0=\kappa^2$ and $b_1=1$, 
 and for $\alpha=2$, we have $b_0=\kappa^4$, 
 $b_1=\alpha\kappa^4$ and $b_2=1$. 
-For fractional $\alpha=1/2$ 
+For fractional $\alpha=1/2$, 
 $b_0=3\kappa/4$ and $b_1=\kappa^{-1}3/8$. 
-And, for $\alpha=3/2$, ($\nu=0.5$, the exponential case), 
+And for $\alpha=3/2$ ($\nu=0.5$, the exponential case), 
 $b_0=15\kappa^3/16$, $b_1=15\kappa/8$, 
 $b_2=15\kappa^{-1}/128$. 
 Using these results combined with recursive construction, 
